# internship_stuff

./: custom_to_sql
Patients_Enrollment/: patients.csv  pyproject.toml
Patients_Enrollment/jupyter/: overview.ipynb
Patients_Enrollment/jupyter/.ipynb_checkpoints/: overview-checkpoint.ipynb
Patients_Enrollment/src/jobs/: extract_and_load.py
Patients_Enrollment/src/sql_queries/: extracting_patients.sql  patient_summary.sql
Patients_Enrollment/src/tests/: patient_validate_test.py
Patients_Enrollment/src/utils/: __init__.py  db.py  logger.py  sql_loader.py  transform.py
refactor_practise/: modernized.py  old.py  tests.py
